# NetController

./: .gitignore  README.md
Client/: CMakeLists.txt  controller.cpp  controller.hpp  main.cpp  sdlhelper.cpp  sdlhelper.hpp
UE4 Plugin/NetController/: NetController.uplugin
UE4 Plugin/NetController/Source/NetController/: NetController.Build.cs
UE4 Plugin/NetController/Source/NetController/Private/: NetController.cpp  NetControllerPrivatePCH.h  NetInputDevice.cpp  NetInputDevice.h
UE4 Plugin/NetController/Source/NetController/Public/: NetController.h
